--- a/assets/css/menu.css
+++ b/assets/css/menu.css
@@ -6,7 +6,7 @@
     height: 100vh;
     right: 0;
     top: 0;
-    width: 20rem;
+    width: 13rem;
     z-index: 9;
     display: none;
     grid-auto-rows: min-content;
@@ -39,6 +39,10 @@
     position: relative;
     border-bottom: solid 1px #fff3;
     padding: 0.75rem 0;
+}
+
+#menu .fa-times {
+    color: rgb(221, 141, 141);
 }
 
 @media (width < 900px) {
