--- a/assets/css/default.css
+++ b/assets/css/default.css
@@ -1,15 +1,18 @@
-@import url('https://fonts.googleapis.com/css2?family=Boldonse&family=Winky+Sans:ital,wght@0,300..900;1,300..900&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Boldonse&family=Rubik+Distressed&family=Winky+Sans:ital,wght@0,300..900;1,300..900&display=swap');
+/* @import url('https://fonts.googleapis.com/css2?family=Boldonse&family=Winky+Sans:ital,wght@0,300..900;1,300..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Boldonse&family=Rubik+Distressed&family=Winky+Sans:ital,wght@0,300..900;1,300..900&display=swap'); */
+@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Boldonse&family=Rubik+Distressed&family=Winky+Sans:ital,wght@0,300..900;1,300..900&display=swap');
 
 :root {
-    --body-color: rgb(215, 255, 255);
+    --body-color: rgb(255, 252, 229);
     --link: rgb(0, 181, 253);
 
-    --font-color: #01181b;
+    --font-color: #301d01;
     --font-family-logo: "Boldonse";
-    --primary: rgb(13, 79, 83);
+    --primary: #fbc26b;
     --primary-03: rgb(0, 255, 98, 0.3);
     --border-light: rgba(255, 255, 255, 0.1);
+
+    --border-light: solid 1px #fbc26b20;
 }
 
 
@@ -194,6 +197,15 @@ html {
 
 .bg-primary {
     background: var(--primary);
+}
+
+.bg-link {
+    background: var(--link);
+}
+
+.bg-button {
+    background-color: var(--primary);
+
 }
 
 .box {
@@ -540,6 +552,11 @@ i {
     background-color: var(--step-bg);
 }
 
+.color-btn,
+.color-btn>* {
+    color: #3a280e !important;
+}
+
 .color-danger {
     color: var(--color-danger);
 }
@@ -689,28 +706,7 @@ i {
     gap: 0.25rem;
 }
 
-#google-signin-button,
-#google-signup-button {
-    max-width: 20rem;
-    margin: 1rem auto;
-}
 
-/* Borde del goton de Google */
-#google-signup-button>div>div>div>:nth-child(1),
-#google-signin-button>div>div>div>:nth-child(1) {
-    border: var(--border-light);
-    border-radius: 100px;
-    background-color: var(--box-bg-t1-invert);
-}
-
-
-
-/* .nsm7Bb-HzV7m-LgbsSe-MJoBVe {
-    background: var(--bodyC);
-    color: var(--font-primary);
-    border: var(--border);
-    border-radius: 50px;
-} */
 
 .switch {
     display: inline-block;
@@ -723,37 +719,7 @@ i {
     display: none;
 }
 
-.slider {
-    /* background-color: var(--box-bg-t1); */
-    bottom: 0;
-    cursor: pointer;
-    left: 0;
-    position: absolute;
-    right: 0;
-    top: 0;
-    transition: .4s;
-    border: var(--border-light);
-}
 
-.slider:before {
-    background-color: var(--box-bg-t1-invert);
-    bottom: 0.2rem;
-    content: "";
-    width: 1rem;
-    height: 1rem;
-    left: 0.2rem;
-    position: absolute;
-    transition: .4s;
-}
-
-input:checked+.slider {
-    background-color: var(--primary);
-}
-
-input:checked+.slider:before {
-    transform: translateX(1rem);
-    background-color: var(--font-primary);
-}
 
 .slider.round {
     border-radius: 100px;
