--- a/assets/css/header.css
+++ b/assets/css/header.css
@@ -2,23 +2,22 @@ header {
     height: 5rem;
     /* background: #0001;
     backdrop-filter: blur(20px); */
-    z-index: 99;
+    z-index: 9999;
     position: fixed;
     inset: 0 0 auto 0;
     width: 100vw;
     max-width: 100vw;
-    border-bottom: solid 1px red;
+    backdrop-filter: blur(5px);
 }
 
 header * {
     color: #fff !important;
 }
 
-header .isotype {
-    background-image: url(../img/brand/isotype_white.png);
-    background-size: 100%;
-    width: 2.5rem;
-    height: 2.5rem;
+
+header nav a {
+    /* text-shadow: 0 0 5px #0009; */
+    font-size: 1.25rem;
 }
 
 
@@ -42,4 +41,6 @@ header .isotype {
     header nav {
         display: none !important;
     }
+
+
 }
