--- a/assets/css/default.css
+++ b/assets/css/default.css
@@ -3,7 +3,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Boldonse&family=Rubik+Distressed&family=Winky+Sans:ital,wght@0,300..900;1,300..900&display=swap');
 
 :root {
-    --body-color: rgb(255, 252, 229);
+    --body-color: #fffce5;
     --link: rgb(0, 181, 253);
 
     --font-color: #301d01;
